Fix overflow

--- a/src/styles/components/_application.scss
+++ b/src/styles/components/_application.scss
@@ -5,6 +5,7 @@
 .rules{
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 
     &--hidden{
         display: none;
